<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.Theme.ToDoYa">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@color/colorPrimary"
            app:collapsedTitleTextAppearance="@style/CollapsedTitleTextAppearance"
            app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandedContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/Text.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/my_todo"
                    app:layout_constraintBottom_toTopOf="@+id/completedTodo"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/completedTodo"
                    style="@style/Text.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/completed"
                    android:textColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/eyeTodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/visibility"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="3dp"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/Base.Theme.ToDoYa"/>

            <ImageView
                android:id="@+id/eyeToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/visibility"
                android:visibility="gone"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/titleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_todo"
                style="@style/Text.Title"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"
                android:visibility="gone"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/background_list_tasks"
                android:elevation="2dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todoRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"/>
            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/add"
        android:layout_margin="16dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.FloatingActionButton"
        app:backgroundTint="@color/blue"
        app:tint="@android:color/white"
        android:contentDescription="@string/addButton"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>